// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoList: Example of using mount should render component with > 1 items 1`] = `
<section
  class=" ms__brMznf"
>
  <div
    data-type="#fragment"
  >
    
    <div>
      
      <header
        class=" ms__jVxsUK"
      >
        <div
          data-type="#fragment"
        >
           
           
        </div>
         
      </header>
      
      <main>
        <ul
          class=" ms__hUhVje"
        >
          <li
            class=" ms__hsUUbt"
          >
            <article
              class=" ms__ezdkTR"
            >
              <label>
                <del
                  class="text-muted"
                >
                  <input
                    checked="true"
                    type="checkbox"
                  />
                  My Todo Item 1
                </del>
              </label>
              <button
                class="btn btn-sm btn-outline-secondary"
              >
                Delete
              </button>
            </article>
          </li>
          <li
            class=" ms__hsUUbt"
          >
            <article
              class=" ms__ezdkTR"
            >
              <label>
                <input
                  type="checkbox"
                />
                My Todo Item 2
              </label>
              <button
                class="btn btn-sm btn-outline-secondary"
              >
                Delete
              </button>
            </article>
          </li>
        </ul>
      </main>
    </div>
  </div>
</section>
`;

exports[`TodoList: Example of using mount should render component with 1 items 1`] = `
<section
  class=" ms__brMznf"
>
  <div
    data-type="#fragment"
  >
    
    <div>
      
      <header
        class=" ms__jVxsUK"
      >
        <div
          data-type="#fragment"
        >
           
           
        </div>
         
      </header>
      
      <main>
        <ul
          class=" ms__hUhVje"
        >
          <li
            class=" ms__hsUUbt"
          >
            <article
              class=" ms__ezdkTR"
            >
              <label>
                <del
                  class="text-muted"
                >
                  <input
                    checked="true"
                    type="checkbox"
                  />
                  My Todo Item 1
                </del>
              </label>
              <button
                class="btn btn-sm btn-outline-secondary"
              >
                Delete
              </button>
            </article>
          </li>
        </ul>
      </main>
    </div>
  </div>
</section>
`;

exports[`TodoList: Example of using mount should render component with no items 1`] = `
<section
  class=" ms__brMznf"
>
  <div
    data-type="#fragment"
  >
    
    <div>
      
      <header
        class=" ms__jVxsUK"
      >
        <div
          data-type="#fragment"
        >
           
           
        </div>
         
      </header>
      
      <main>
        <ul
          class=" ms__hUhVje"
        />
      </main>
    </div>
  </div>
</section>
`;
